# python_gym

./: README.md  pyproject.toml  tools.py
arithmetic_operators/: __init__.py  task_1.py  task_10.py  task_11.py  task_12.py  task_13.py  task_14.py  task_2.py  task_3.py  task_4.py  task_5.py  task_6.py  task_7.py  task_8.py  task_9.py
arithmetic_operators/class_work/: calculate_f_g_s.py  calculate_values.py  count_values_1.py  count_values_2.py
arithmetic_operators/classwork/: calculate_values.py
arithmetic_operators/home_work/: calculate_1.py  calculate_2.py  calculate_value.py  calculate_y_from_a_and_angle_x.py  calculate_y_from_a_b_c_d_and_angle_x.py  celsius_to_fahrenheit.py  cost_in_rubles_and_kopecks.py  cost_in_rubles_and_pennies.py  count_of_cabins.py  count_of_desks.py  count_of_square_in_rectangle.py  count_value.py  find_b_in_a.py  glue_numbers.py  leftmost_digit_to_right_end.py  perimeter_and_square_of_triangle.py  sum_of_digits.py  third_digit_from_end.py  сelsius_to_fahrenheit.py
arithmetic_operators/homework/: calculate_y_from_a_b_c_d_and_angle_x.py  cost_in_rubles_and_pennies.py  (+7 more)
data_types_formatted_output/: __init__.py
for_loop/: __init__.py
if_elif_else/: __init__.py
lesson_10/: __init__.py
lesson_9/: __init__.py
operator_if/: __init__.py
tests/: test_1.py  test_arithmetic_operators.py  test_data_types_formatted_output.py  test_for_loop.py  test_if_elif_else.py  test_lesson_10.py  test_lesson_9.py  test_logical_operators.py  test_operator_if.py  test_while_loop.py
topic_2/: task_4.py  task_6.py  task_8.py
while_loop/: __init__.py
(+125 files in other folders)
