[tool.poetry]
name = "python-gym"
version = "0.1.0"
description = ""
authors = ["dasha2000vas <vasilevsckaya.dascha@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.7"
pytest = "8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
